# moot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/data/: 0001-init.sql
src/routing/: __init__.py  frontend.py
src/routing/api/: __init__.py  oauth.py
src/utils/: bitfield.py  database.py  datamodels.py  ids.py  oauth.py
static/css/: style.css  style.css.map
static/scss/: style.scss
templates/: 404.html  base.html  index.html  login.html  moderation.html  moot.html  new.html  og.html  search.html  user.html  usr.html  viewmoot.html
