[tool.poetry]
name = "moot"
version = "1.0.0"
description = "The social media platform with a minimum length."
authors = ["vcokltfre <vcokltfre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
