[tool.poetry]
name = "moot"
version = "1.0.0"
description = "The social media platform with a minimum length."
authors = ["vcokltfre <vcokltfre@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
Jinja2 = "^2.11.3"
aiofiles = "^0.6.0"
python-dotenv = "^0.17.1"
aiohttp = "^3.7.4"
itsdangerous = "^1.1.0"
asyncpg = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
